graph-f9d5b75a-1610-48e2-a61e-f36426c0fd21/kubernates/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-cb24d1f9-d384-4cdb-8274-44c76eb1ab34
  namespace: 8b14c5d1-811a-4cc9-8737-683a7a171885
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app-cb24d1f9-d384-4cdb-8274-44c76eb1ab34
  template:
    metadata:
      labels:
        app: springboot-app-cb24d1f9-d384-4cdb-8274-44c76eb1ab34
    spec:
      containers:
      - name: springboot
        image: ravi8881/8b14c5d1-811a-4cc9-8737-683a7a171885-a2963e46-2d7f-42eb-b64d-1805a17d9ad0-cb675f93-5046-4219-9ffa-bed6b01190f5-cb24d1f9-d384-4cdb-8274-44c76eb1ab34-graph:1.0.0
        ports:
        - containerPort: 8081
