graph-f9d5b75a-1610-48e2-a61e-f36426c0fd21/kubernates/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service-cb24d1f9-d384-4cdb-8274-44c76eb1ab34
  namespace: 8b14c5d1-811a-4cc9-8737-683a7a171885
spec:
  selector:
    app: springboot-app-cb24d1f9-d384-4cdb-8274-44c76eb1ab34
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
