graph-f9d5b75a-1610-48e2-a61e-f36426c0fd21/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-cb24d1f9-d384-4cdb-8274-44c76eb1ab34
  namespace: 8b14c5d1-811a-4cc9-8737-683a7a171885
  annotations:
    ngrok.com/ingress-mode: edge
  labels:
    app: springboot-app-cb24d1f9-d384-4cdb-8274-44c76eb1ab34
spec:
  ingressClassName: ngrok
  rules:
    - host: picked-apt-wombat.ngrok-free.app
      http:
        paths:
          - backend:
              service:
                name: springboot-service-cb24d1f9-d384-4cdb-8274-44c76eb1ab34
                port:
                  number: 80
            path: /graphiql
            pathType: Prefix
          - backend:
              service:
                name: springboot-service-cb24d1f9-d384-4cdb-8274-44c76eb1ab34
                port:
                  number: 80
            path: /graphql
            pathType: Prefix
